# azure-secret-watch

./: .dockerignore  .env.example  .gitignore  1  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  docker-compose.once.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
azure_secret_watch/: __main__.py  app.py  cache.py  config.py  graph_client.py  healthcheck.py  models.py  scanner.py  scheduler.py  settings.py  state_store.py  web.py
azure_secret_watch/notifiers/: __init__.py  base.py  email_notifier.py  teams_notifier.py  webhook_notifier.py
azure_secret_watch/templates/: base.html  dashboard.html  help.html  settings.html
tests/: conftest.py  test_app.py  test_cache.py  test_graph_client.py  test_models.py  test_notifiers.py  test_scanner.py  test_settings.py  test_state_store.py  test_web.py
